--- a/Rflex.html
+++ b/Rflex.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" intial-scale="1.0">
-		<link rel="stylesheet" type="text/css" href="/storage/emulated/0/Restaurant/css/Rflex.css">
-		<link rel="icon" type="image/png" href="/storage/emulated/0/Restaurant/img/Wallpaper.jpeg">
+		<link rel="stylesheet" type="text/css" href="Rflex.css">
+		<link rel="icon" type="image/png" href="Wallpaper.jpeg">
 		<title>Restaurant</title>
 	</head>
 	<body>
@@ -16,26 +16,26 @@
 			</ul><br><br><br><br>
 		<h1><span><marquee behaviour="scroll" direction="right">SOLID</marquee></span></h1>
 		<div class="flex-container">
-			<div class="flex-item">Eba<br><img src="/storage/emulated/0/Restaurant/img/Eba.jpeg" alt="Eba" height="120px" width="150px"></div>
-				<p>Price: #200...<a href="/storage/emulated/0/Restaurant/html/Rflex.html">Order</a></p>
-			<div class="flex-item">Semo<br><img src="/storage/emulated/0/Restaurant/img/Semo.jpeg" alt="Semo" height="120px" width="150px"></div>
-				<p>Price: #300...<a href="/storage/emulated/0/Restaurant/html/Rflex.html">Order</a></p>
-			<div class="flex-item">Amala<br><img src="/storage/emulated/0/Restaurant/img/Amala.jpeg" alt="Amala" height="120px" width="150px"></div>
-				<p>Price: #250...<a href="/storage/emulated/0/Restaurant/html/Rflex.html">Order</a></p>
-			<div class="flex-item">Iyan<br><img src="/storage/emulated/0/Restaurant/img/Iyan.jpeg" alt="Iyan" height="120px" width="150px"></div>
-				<p>Price: #400...<a href="/storage/emulated/0/Restaurant/html/Rflex.html">Order</a></p>
+			<div class="flex-item">Eba<br><img src="Eba.jpeg" alt="Eba" height="120px" width="150px"></div>
+				<p>Price: #200...<a href="Rflex.html">Order</a></p>
+			<div class="flex-item">Semo<br><img src="Semo.jpeg" alt="Semo" height="120px" width="150px"></div>
+				<p>Price: #300...<a href="Rflex.html">Order</a></p>
+			<div class="flex-item">Amala<br><img src="Amala.jpeg" alt="Amala" height="120px" width="150px"></div>
+				<p>Price: #250...<a href="Rflex.html">Order</a></p>
+			<div class="flex-item">Iyan<br><img src="Iyan.jpeg" alt="Iyan" height="120px" width="150px"></div>
+				<p>Price: #400...<a href="Rflex.html">Order</a></p>
 		</div>
 		<h2><marquee>AVAILABLE TODAY</marquee></h2>
 		<div class="flex-container">
-			<div class="flex-item">Plantain<br><img src="/storage/emulated/0/Download/Plantain.jpg" alt="Plantain" height="120px" width="150px"></div>
-				<p>Price: #200...<a href="/storage/emulated/0/Restaurant/html/Rflex.html">Order</a></p>
-			<div class="flex-item">Jollof Rice<br><img src="/storage/emulated/0/Download/Jollofrice.jpg" alt="Jollofrice" height="120px" width="150px"></div>
-				<p>Price: #200...<a href="/storage/emulated/0/Restaurant/html/Rflex.html">Order</a></p>
+			<div class="flex-item">Plantain<br><img src="Plantain.jpg" alt="Plantain" height="120px" width="150px"></div>
+				<p>Price: #200...<a href="Rflex.html">Order</a></p>
+			<div class="flex-item">Jollof Rice<br><img src="Jollofrice.jpg" alt="Jollofrice" height="120px" width="150px"></div>
+				<p>Price: #200...<a href="flex.html">Order</a></p>
 		</div>
 		<footer>
 			<div id="logo">
-				<a href="www.facebook.com"><img src="/storage/emulated/0/ECX/pictures/facebook.jpeg" Title="facebook" height="50px" width="50px"></a>
-				<a href="www.instagram.com"><img src="/storage/emulated/0/ECX/pictures/instagram.jpeg" title="instagram" height="50px" width="50px"></a>
+				<a href="www.facebook.com"><img src="facebook.jpeg" Title="facebook" height="50px" width="50px"></a>
+				<a href="www.instagram.com"><img src="instagram.jpeg" title="instagram" height="50px" width="50px"></a>
 			<center><p>&copy; 2020 HCA Nigeria</p></center>
 			</div>
 		</footer>
