--- a/Rflex.html
+++ b/Rflex.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width" intial-scale="1.0">
 		<link rel="stylesheet" type="text/css" href="Rflex.css">
 		<link rel="icon" type="image/png" href="Wallpaper.jpeg">
+                <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>Restaurant</title>
 	</head>
 	<body>
