--- a/Rflex.html
+++ b/Rflex.html
@@ -33,12 +33,16 @@
 			<div class="flex-item">Jollof Rice<br><img src="Jollofrice.jpg" alt="Jollofrice" height="120px" width="150px"></div>
 				<p>Price: #200...<a href="flex.html">Order</a></p>
 		</div>
-		<footer>
-			<div id="logo">
-				<a href="www.facebook.com"><img src="facebook.jpeg" Title="facebook" height="50px" width="50px"></a>
-				<a href="www.instagram.com"><img src="instagram.jpeg" title="instagram" height="50px" width="50px"></a>
-			<center><p>&copy; 2020 HCA Nigeria</p></center>
-			</div>
-		</footer>
+            <section class="two">
+	        <footer>
+	       	    <div class="L" id="foot">
+			<ul>
+				<li><a href="https://m.facebook.com/profile.php"><i class="fa fa-2x fa-facebook-f"></i></a></li>
+				<li><a href="mailto:harkinhteeh@gmail.com"><i class="fa fa-2x fa-envelope"></i></a></li>
+			</ul>
+		    </div>
+			<center><p>&copy; Developed By Akinsanya Taiwo</p></center>
+	       </footer>
+           </section>
 	</body>
 </html>
